tests/expectations/compiler/function/duplicate_definition_fail.out
Error [EAST0372017]: The name `main` is defined multiple times.
    --> compiler-test:8:10
     |
   4 |   function main(y: bool) -> bool {
     |            ^^^^ previous definition of `main` here
   ...
   8 |   function main(y: bool) -> bool {
     |            ^^^^ `main` redefined here
